--- a/index.html
+++ b/index.html
@@ -24,21 +24,30 @@
     <title>trendZ</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="home">
       <nav class="navbar">
         <span class="navbar__logo">trendZ logo</span>
+        <buttn class="toggle-collapse">
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </buttn>
         <ul class="navbar__list">
           <li class="navbar__item">
-            <a href="#" class="navbar__link">Home</a>
+            <a href="#home" class="navbar__link">Home</a>
           </li>
           <li class="navbar__item">
-            <a href="#" class="navbar__link">Shop</a>
+            <a href="#trending" class="navbar__link">Trending</a>
           </li>
           <li class="navbar__item">
-            <a href="#" class="navbar__link">About</a>
+            <a href="#about" class="navbar__link">About</a>
           </li>
           <li class="navbar__item">
-            <a href="#" class="navbar__link">Contact</a>
+            <a href="#collections" class="navbar__link">collections</a>
+          </li>
+          <li class="navbar__item">
+            <a href="#services" class="navbar__link">Services</a>
+          </li>
+          <li class="navbar__item">
+            <a href="#contact" class="navbar__link">Contact</a>
           </li>
         </ul>
       </nav>
@@ -46,10 +55,9 @@
         <h1 class="hero__title">trendZ by rj</h1>
         <h2 class="hero__tagline"></h2>
       </div>
-      <!-- <div class="marker"></div> -->
     </header>
 
-    <section class="trending">
+    <section class="trending" id="trending">
       <h3 class="heading heading--primary">trending</h3>
       <h3 class="heading heading--background">trending</h3>
 
@@ -94,7 +102,7 @@
       </div>
     </section>
 
-    <section class="about">
+    <section class="about" id="about">
       <div class="about__div--photo"></div>
 
       <div class="about__div--description">
@@ -110,9 +118,9 @@
       </div>
     </section>
 
-    <section class="collections">
-      <h3 class="heading heading--primary">Our Collections</h3>
+    <section class="collections" id="collections">
       <h3 class="heading heading--background">collections</h3>
+      <h3 class="heading heading--primary">Our Collections</h3>
 
       <div class="collections__div">
         <div class="collections__single">
@@ -184,7 +192,7 @@
       </div>
     </section>
 
-    <section class="services">
+    <section class="services" id="services">
       <h3 class="heading heading--background">services</h3>
       <h3 class="heading heading--primary">we want you to express yourself</h3>
 
@@ -225,11 +233,11 @@
       <div id="map"></div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer" id="contact">
       <div class="footer__div">
         <h3 class="footer__logo">TRENDZ</h3>
         <div class="footer__media-icons-div">
-          <a href="#" class="footer__links"
+          <a href="https://www.facebook.com/trendzbyrj" class="footer__links"
             ><i
               class="footer__media-icons fa fa-facebook-square"
               aria-hidden="true"
