--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   <body>
     <header class="header" id="home">
       <nav class="navbar">
-        <span class="navbar__logo">trendZ logo</span>
+        <span class="navbar__logo">
+          <img src="img/logo.png" alt="logo" class="navbar__logo-img" />
+        </span>
         <buttn class="toggle-collapse">
           <i class="fa fa-bars" aria-hidden="true"></i>
         </buttn>
@@ -64,39 +66,19 @@
       <div class="trending__carousel">
         <div class="main-carousel">
           <div class="carousel-cell">
-            <img
-              src="img/40648972_2223685311037260_3428419607801626624_o.jpg"
-              alt=""
-              class="trending__image"
-            />
+            <img src="img/img-1.jpg" alt="" class="trending__image" />
           </div>
           <div class="carousel-cell">
-            <img
-              src="img/46405233_2360690870670036_8450278052423794688_o.jpg"
-              alt=""
-              class="trending__image"
-            />
+            <img src="img/img-2.jpg" alt="" class="trending__image" />
           </div>
           <div class="carousel-cell">
-            <img
-              src="img/46449251_2360684067337383_2484273160623489024_o.jpg"
-              alt=""
-              class="trending__image"
-            />
+            <img src="img/img-3.jpg" alt="" class="trending__image" />
           </div>
           <div class="carousel-cell">
-            <img
-              src="img/46485337_2360685347337255_7237384678217351168_o.jpg"
-              alt=""
-              class="trending__image"
-            />
+            <img src="img/img-4.jpg" alt="" class="trending__image" />
           </div>
           <div class="carousel-cell">
-            <img
-              src="img/46493238_2360690220670101_3518073407973359616_o.jpg"
-              alt=""
-              class="trending__image"
-            />
+            <img src="img/img-5.jpg" alt="" class="trending__image" />
           </div>
         </div>
       </div>
@@ -124,38 +106,49 @@
 
       <div class="collections__div">
         <div class="collections__single">
-          <img
-            src="img/40648972_2223685311037260_3428419607801626624_o.jpg"
-            alt="collection"
-            class="collections__img"
-          />
+          <a href="suit.html" class="collections__link">
+            <img
+              src="img/img-1.jpg"
+              alt="collection"
+              class="collections__img"
+            />
+          </a>
           <h3 class="collections__title">Suit</h3>
         </div>
 
         <div class="collections__single">
-          <img
-            src="img/46485337_2360685347337255_7237384678217351168_o.jpg"
-            alt="collection"
-            class="collections__img"
-          />
+          <a href="lehnga.html" class="collections__link">
+            <img
+              src="img/img-2.jpg"
+              alt="collection"
+              class="collections__img"
+            />
+          </a>
+
           <h3 class="collections__title">lehnga</h3>
         </div>
 
         <div class="collections__single">
-          <img
-            src="img/46449251_2360684067337383_2484273160623489024_o.jpg"
-            alt="collection"
-            class="collections__img"
-          />
+          <a href="kurta.html" class="collections__link">
+            <img
+              src="img/img-3.jpg"
+              alt="collection"
+              class="collections__img"
+            />
+          </a>
+
           <h3 class="collections__title">kurta</h3>
         </div>
 
         <div class="collections__single">
-          <img
-            src="img/46405233_2360690870670036_8450278052423794688_o.jpg"
-            alt="collection"
-            class="collections__img"
-          />
+          <a href="saree.html" class="collections__links"
+            ><img
+              src="img/img-4.jpg"
+              alt="collection"
+              class="collections__img"
+            />
+          </a>
+
           <h3 class="collections__title">Saree</h3>
         </div>
       </div>
