--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/icon-font.css" />
-    <link rel="stylesheet" type="image/png" href="img/logo.png"/>
+    <link rel="shortcut icon" type="image/png" href="img/logo.png"/>
     <link rel="stylesheet" href="css/style.css" />
     <title>trendZ</title>
   </head>
