--- a/kurta.html
+++ b/kurta.html
@@ -18,6 +18,9 @@
     <title>Kurta</title>
   </head>
   <body>
+    <a href="index.html#collections" class="back">
+      <h3 class="heading">Back to main</h3>
+    </a>
     <div class="container">
       <h3 class="heading heading--primary">Kurta</h3>
       <h3 class="heading heading--background">Kurta</h3>
