--- a/suit.html
+++ b/suit.html
@@ -18,6 +18,9 @@
     <title>Suit</title>
   </head>
   <body>
+    <a href="index.html#collections" class="back">
+      <h3 class="heading">Back to main</h3>
+    </a>
     <div class="container">
       <h3 class="heading heading--primary">Suit</h3>
       <h3 class="heading heading--background">Suit</h3>
