--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           vihar,delhi,india 110052</span
         >
         <span class="footer__items"
-          ><i class="fa fa-phone" aria-hidden="true"></i>09810583983</span
+          ><i class="fa fa-phone" aria-hidden="true"></i>XXXXXXXXX</span
         >
         <span class="footer__items"
           ><i class="fa fa-envelope" aria-hidden="true"></i>
